# gbk-fs

./: .gbk-fs.example.json  .gitignore  README.md  pyproject.toml
src/gbk_fs/: __init__.py  __main__.py  config.py  core.py  encoding.py  errors.py  fileio.py  git.py  locks.py  paths.py  search.py  server.py
tests/: conftest.py  test_concurrency.py  test_encoding.py  test_git.py  test_guard.py  test_line_edits.py  test_read_write_edit.py  test_sandbox.py  test_search.py
